tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"type\":\"Login\",\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"test@loco.com\",\"is_verified\":true}",
)
