tests/requests/snapshots/resend_verification_user@auth_request.snap
---
source: tests/requests/auth.rs
expression: user
---
Model {
    id: ID
    pid: PID,
    email: "test@loco.com",
    password: "PASSWORD",
    api_key: "lo-PID",
    name: "loco",
    reset_token: None,
    reset_sent_at: None,
    email_verification_token: Some(
        "PID",
    ),
    email_verification_sent_at: Some(
        DATE,
    ),
    email_verified_at: None,
    magic_link_token: None,
    magic_link_expiration: None,
    totp_secret: None,
    totp_verified_at: None,
    totp_login_token: None,
    totp_login_token_expiration: None,
    created_at: DATE,
    updated_at: DATE,
}
